Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.3
-
-
9054950b7c51cc0d07040eb112ff7ce75e635abd (qt/qtbase/5.12)
Description
The when the mouse cursor is hovered over any QSpinBox control, it flashes between the standard arrow and i-beam cursors. It does this even when the cursor is over non-selected spinbox controls. Switching rate is the same as the cursor position indicator in the spinbox control. This applies to any set mouse cursor e.g. if you set hand cursor to a widget, if flickers hand-arrow.
The attached example can be used to reproduce the problem. Just hover over the spin boxes or the widgets in the right hand side of the window. Tested only on macOS.
The problem seems to be caused by this patch: https://codereview.qt-project.org/#/c/254893/. Or that's where git bisect pointed to.
Attachments
For Gerrit Dashboard: QTBUG-75552 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
260941,2 | macOS: Always respond to cursorUpdate by applying custom cursor if set | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |